fix menu navigation mobile version

--- a/style.css
+++ b/style.css
@@ -1,153 +1,183 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
 body,
 html {
-  max-height: 100vh;
-  overflow: hidden;
+    max-height: 100vh;
+    overflow: hidden;
 }
+
 header,
 footer,
 section {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
 header {
-  background-color: pink;
+    background-color: pink;
 }
 
 footer {
-  background-color: bisque;
+    background-color: bisque;
 }
 
-section:first-of-type {
-  background-color: rgb(164, 249, 255);
+
+section{
+    background-color: rgb(70, 231, 243);
 }
 
-section:nth-of-type(2) {
-  background-color: rgb(70, 231, 243);
-}
-section:last-of-type {
-  background-color: rgb(30, 156, 165);
-}
 
 .page-wrapper {
-  transition: 2s;
+    transition: 2s;
 }
 
 /* PAGE CONTROLS */
 .page-controls {
-  position: absolute;
-  z-index: 10;
-  right: 30px;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  /* border: solid; */
-  /* background-color: white; */
+    position: absolute;
+    z-index: 10;
+    right: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    /* border: solid; */
+    /* background-color: white; */
 }
 
 .page-button {
-  width: 20px;
-  height: 20px;
-  border-radius: 100%;
-  border: solid rgba(255, 255, 255, 0.8) 2px;
-  background-color: transparent;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    border: solid rgba(255, 255, 255, 0.8) 2px;
+    background-color: transparent;
 }
+
 .page-button:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .page-button:first-of-type {
-  background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 /* HEADER */
 .header-nav {
-  position: fixed;
-  z-index: 10;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: rgb(255, 255, 255, 0.2);
-  backdrop-filter: blur(10px);
-  width: 40%;
-  height: fit-content;
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-  border-radius: 30px;
+    position: fixed;
+    z-index: 10;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgb(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    width: 40%;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 30px;
 }
 
 .header-nav a {
-  color: black;
-  text-decoration: none;
-  font-size: 1.3rem;
-  padding: 0 10px;
-  text-decoration: solid underline rgba(0, 0, 0, 0);
-  transition: text-decoration 1s;
+    color: black;
+    text-decoration: none;
+    font-size: 1.3rem;
+    padding: 0 10px;
+    text-decoration: solid underline rgba(0, 0, 0, 0);
+    transition: text-decoration 1s;
 }
+
 .header-nav a:hover {
-  text-decoration: underline solid rgb(49, 48, 48);
+    text-decoration: underline solid rgb(49, 48, 48);
+    cursor: pointer;
 }
+
 .header-nav a:nth-child(2) {
-  border-left: solid gray 1px;
-  border-right: solid gray 1px;
+    border-left: solid gray 1px;
+    border-right: solid gray 1px;
 }
 
 /* projects */
 .project {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-end;
-  gap: 20px;
-  padding: 0 2%;
-  padding-bottom: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    gap: 20px;
+    padding: 0 2%;
+    padding-bottom: 10%;
 }
+
 .project1 {
-  background: url(https://plus.unsplash.com/premium_photo-1695045521233-b59b38739161?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
-    center/cover;
+    background: url(https://plus.unsplash.com/premium_photo-1695045521233-b59b38739161?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) center/cover;
 }
 
 .project-title,
 .project-description,
 .project-tags,
 .project-buttons {
-  background-color: rgb(255, 255, 255, 0.2);
-  backdrop-filter: blur(10px);
-  /* border: solid 1px rgba(255, 255, 255, 0.5); */
-  padding: 10px;
-  border-radius: 10px;
+    background-color: rgb(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    /* border: solid 1px rgba(255, 255, 255, 0.5); */
+    padding: 10px;
+    border-radius: 10px;
+}
+.project-title{
+    font-size: 2rem;
 }
 
 .project-description {
-  width: 70%;
+    width: 70%;
+    font-size: 1.5rem;
 }
 
 
-.project-description a{
-    background-color: aliceblue;
-    padding: 10px;
+.project-button {
+    background-color: white;
+    padding: 5px;
     display: inline-block;
     border-radius: 10px;
+    text-decoration: none;
+    color: black;
+    margin-top: 10px;
+    transition: 0.5s;
+}
+
+.project-button:hover {
+    background-color: #f1f1f1;
+}
+
+.project-tags{
+    display: flex;
+    gap: 15px;
 }
 
 
 @media (max-width: 400px) {
-  .header-nav{
-    width: 70%;
-  }
-  .project {
-  justify-content: center;
+    .header-nav {
+        width: 90%;
+    }
 
-  }
+    .project {
+        justify-content: center;
+
+    }
+    .project-title{
+        font-size: 1rem;
+    }
+
+    .project-description {
+        width: 80%;
+        font-size: 0.8rem;
+    }
+    .project-tags{
+        font-size: 1rem;
+    }
 }
